--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -1,7 +1,5 @@
-
-<div class="main">
-    <div class="container">
-        <div class="row">
+<div class="col-xs-12 ">
+<div class="home-page">
 
             <div class="reports-lft col-sm-8 col-xs-12">
 
@@ -247,9 +245,10 @@
                     </div>
                 </div>
             </div>
+    <div class="clearfix"></div>
         </div>
-    </div>
 </div>
+
 <script>
 
     $(document).ready(function(){
