--- a/client/views/partials/payments/paymentsReceived.html
+++ b/client/views/partials/payments/paymentsReceived.html
@@ -52,4 +52,9 @@
                     <td colspan="8">No Payments Records exist.</td>
                 </tr>
             </table>
+            <div class="add-image pull-right">
+                <figure>
+                    <a href="#" ng-click="goToEditPaymentsPage()"><img src="images/Add_Payments.png"></a>
+                </figure>
+            </div>
         </div>
