--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -59,5 +59,11 @@
                     <td colspan="8">No trips Records exist.</td>
                 </tr>
             </table>
+            <div class="add-image pull-right">
+                <figure>
+                    <a href="#" ng-click="goToEditTripPage()"><img src="images/Add_Vehicle.png"></a>
+                </figure>
+            </div>
+
 
         </div>
