--- a/client/views/templates/amountByParties.html
+++ b/client/views/templates/amountByParties.html
@@ -1,9 +1,5 @@
 
-<<<<<<< a60d6d0e91951bc6c4247a4d26193776310a51bb:client/views/partials/dashboard/amountByParties.html
-<div class="main-right col-xs-9" ng-controller="dashboardController">
-=======
-<div class="main-temp col-xs-12">
->>>>>>> Pull Request:client/views/templates/amountByParties.html
+<div class="main-temp col-xs-12 mt-20">
     <h3>Pending Payments</h3>
 
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
