--- a/client/views/templates/amountByPartyId.html
+++ b/client/views/templates/amountByPartyId.html
@@ -1,16 +1,6 @@
 
-<<<<<<< a60d6d0e91951bc6c4247a4d26193776310a51bb:client/views/partials/dashboard/amountByPartyId.html
-<div class="main-right col-xs-9" ng-controller="paymentsById">
+<div class="main-temp col-xs-12 mt-20">
     <h3>Payments - {{partyName}}</h3>
-
-    <div class="toolbar-button-div pull-right mb-10">
-        &nbsp;
-    </div>
-=======
-<div class="main-temp col-xs-12">
-    <h3>Payments - {{partyName}}</h3>
-
->>>>>>> Pull Request:client/views/templates/amountByPartyId.html
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
         <tr ng-repeat="amountListByPartyId in results" style="text-align: center;">
 
