--- a/client/views/templates/expenseByVehicleId.html
+++ b/client/views/templates/expenseByVehicleId.html
@@ -1,15 +1,6 @@
-<div class="main-right col-xs-9" ng-controller="paymentsById">
-    <h3>Expense - {{vehicleNumber}}</h3>
 
-<<<<<<< a60d6d0e91951bc6c4247a4d26193776310a51bb:client/views/partials/dashboard/expenseByVehicleId.html
-    <div class="toolbar-button-div pull-right mb-10">
-        &nbsp;
-    </div>
-=======
-<div class="main-temp col-xs-12">
+<div class="main-temp col-xs-12 mt-20">
     <h3>Expense - {{vehicleNumber}}</h3>
-
->>>>>>> Pull Request:client/views/templates/expenseByVehicleId.html
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="expenseParams">
         <tr ng-repeat="listOfExpensesByVehicleId in expensesByVehicleId" style="text-align: center;">
             <td data-title="'Date'" sortable="'regNumber'" class="clickable-item col-sm-2">
