--- a/client/views/templates/expiryTrucks.html
+++ b/client/views/templates/expiryTrucks.html
@@ -1,5 +1,5 @@
 
-        <div class="main-temp col-xs-12">
+        <div class="main-temp col-xs-12 mt-20">
             <h3>Expiry Trucks</h3>
             <!--<div class="toolbar-button-div pull-right mb-10">-->
                 <!--&nbsp;-->
