--- a/client/views/templates/revenueByVehicle.html
+++ b/client/views/templates/revenueByVehicle.html
@@ -1,23 +1,12 @@
-<<<<<<< a60d6d0e91951bc6c4247a4d26193776310a51bb:client/views/partials/dashboard/revenueByVehicle.html
-<div class="main-right col-xs-9" ng-controller="dashboardController">
-    <h3>Revenue</h3>
-    <div class="toolbar-button-div pull-right mb-10">
-        &nbsp;
-    </div>
-    <table class="table table-bordered table-striped table-condensed table-hover" ng-table="revenueParams">
-=======
-<div class="main-temp col-xs-12">
-<<<<<<< 2cb19da5b05be514df4cc11531025eeb55e7e4be
-    <h3>Revenue</h3>
+
+<div class="main-temp col-xs-12 mt-20">
       <table class="table table-bordered table-striped table-condensed table-hover" ng-table="revenueParams">
->>>>>>> Pull Request:client/views/templates/revenueByVehicle.html
-=======
     <div class="col-xs-12 pall-zero db-expenses">
         <div class="col-xs-3"><p>Total Revenue</p></div>
         <div class="col-xs-9">
             <ul class="list-inline">
-                <li class="col-xs-3"> <date-picker id="fromDate" ng-model="" class="fromDate"></date-picker></li>
-                <li class="col-xs-3"> <date-picker id="toDate" ng-model="" class="toDate"></date-picker></li>
+                <li class="col-xs-3"> <date-picker id="fromDate" ng-model="fromDate" class="fromDate"></date-picker></li>
+                <li class="col-xs-3"> <date-picker id="toDate" ng-model="toDate" class="toDate"></date-picker></li>
                 <li class="col-xs-3">
                     <select>
                         <option>All Vehicles</option>
@@ -28,7 +17,6 @@
     </div>
 
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="revenueParams">
->>>>>>> Pull Request
         <tr ng-repeat="revenueListByRegNo in revenueByVehicle" style="text-align: center;">
             <td data-title="'Registration No'" sortable="'registrationNo'" class="clickable-item col-sm-2">
                 <a href="#"
