--- a/client/views/templates/userProfile/myProfile.html
+++ b/client/views/templates/userProfile/myProfile.html
@@ -1,4 +1,4 @@
-<div class="user-form">
+<div class="user-form" ng-controller="NavCtrl">
     <div class="col-sm-2 col-xs-12 user-pic">
         <figure>
             <img src="images/user.png">
