--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -1,88 +1,89 @@
+<div class="main-right col-xs-12" ng-controller="AddEditDriverCtrl">
+    <div class="col-xs-12 account-edit">
+        <h2 class="title-name">{{pageTitle}}</h2>
+        <form ng-submit="addOrUpdateAccount()">
+            <div class="col-xs-6 col-xs-12 mt-10">
 
-
-        <div class="main-right col-xs-12" ng-controller="AddEditDriverCtrl">
-            <div class="col-xs-12 account-edit">
-                <h2 class="login-heading">{{pageTitle}}</h2>
-                <form ng-submit="addOrUpdateAccount()">
-                    <div class="col-xs-6 col-xs-12 mt-10">
-                        <div class="form-group col-xs-12">
-                            <label for="fullName" class="col-xs-12 col-sm-4 pall-zero">Full Name</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="driver.fullName" type="text" class="form-control" id="fullName"
-                                       placeholder="Driver full name">
-                            </div>
-                        </div>
-
-                        <div class="form-group col-xs-12">
-                            <label for="mobile" class="col-xs-12 col-sm-4 pall-zero">Mobile Number</label>
-                            <div class="col-sm-8 col-xs-12">
-                                <input ng-model="driver.mobile" type="number" class="form-control" id="mobile"
-                                       placeholder="Mobile Number">
-                            </div>
-                        </div>
-
-                        <div class="form-group col-xs-12">
-                            <label for="truckId" class="col-xs-12 col-sm-4 pall-zero">Truck Registration Number</label>
-                            <div class="col-sm-8 col-xs-12">
-
-
-                                <!-- <input type="text" ng-model="driver.truckId" uib-typeahead="truck as truck.registrationNo for truck in trucks | filter:$viewValue" class="form-control" id="truckId" typeahead-show-hint="true" >
- -->
-                                <input type="text" ng-model="truckRegNo"
-                                       uib-typeahead="truck.registrationNo for truck in trucks | filter:$viewValue"
-                                       class="form-control" typeahead-min-length="1"
-                                       typeahead-on-select="selectTruckId($item)" typeahead-select-on-exact="true"
-                                       typeahead-select-on-blur="true" autocomplete="false" id="truckId">
-                                <!--<select ng-model="driver.truckId"
-                                       ng-options="truck._id as truck.registrationNo for truck in trucks" type="text"
-                                       class="form-control" >
-                               </select>-->
-                            </div>
-                        </div>
-                        <div class="form-group col-xs-12">
-                            <label for="licenseValidity" class="col-xs-12 col-sm-4 pall-zero">License Validity</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <date-picker id="licenseValidity" ng-model="driver.licenseValidity"></date-picker>
-                            </div>
-                        </div>
+                <div class="form-group col-xs-12">
+                    <div class="col-xs-12">
+                        <input ng-model="driver.fullName" type="text" class="form-control custom-form-control"
+                               id="fullName" placeholder="Full Name*">
                     </div>
-                    <div class="col-xs-12 col-sm-6 mt-10">
+                </div>
 
-                        <div class="form-group col-xs-12">
-                            <label for="salary" class="col-xs-12 col-sm-4 pall-zero">Salary</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="driver.salary" type="number" class="form-control" id="salary"
-                                       placeholder="Salary">
-                            </div>
-                        </div>
+                <div class="form-group col-xs-12">
+                    <div class="col-xs-12">
+                        <input ng-model="driver.mobile" type="number" class="form-control custom-form-control"
+                               id="mobile"
+                               placeholder="Contact Number*">
+                    </div>
+                </div>
 
-                        <div class="form-group col-xs-12">
-                            <label for="licenseNumber" class="col-xs-12 col-sm-4 pall-zero">License Number</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="driver.licenseNumber" type="text" class="form-control"
-                                       id="licenseNumber"
-                                       placeholder="License Number">
-                            </div>
-                        </div>
-                        <div class="form-group col-xs-12">
-                            <label class="col-sm-4 pall-zero">Driver Status</label>
-                            <div class="col-sm-8"><input type="checkbox" ng-model="driver.isActive"></div>
-                        </div>
+                <div class="form-group col-xs-12">
+                    <div class="col-xs-12 pos-relative">
+                        <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                        <input type="text" ng-model="truckRegNo"
+                               uib-typeahead="truck.registrationNo for truck in trucks | filter:$viewValue"
+                               class="form-control custom-form-control" typeahead-min-length="1"
+                               typeahead-on-select="selectTruckId($item)" typeahead-select-on-exact="true"
+                               typeahead-select-on-blur="true" autocomplete="false" id="truckId"
+                               placeholder="Select Truck*">
 
                     </div>
+                </div>
+                <div class="form-group col-xs-12">
 
-                    <div class="clearfix"></div>
-                    <div class="col-xs-4 col-xs-push-4">
-                        <div class="alert alert-danger" role="alert" ng-show="driver.errors.length">
-                            <ul>
-                                <li ng-repeat="error in driver.errors">{{error}}</li>
-                            </ul>
-                        </div>
-                        <button type="submit" class="btn btn-primary" ng-click="addOrSaveDriver()">Submit</button>
-                        <input type="button" value="Cancel" class="btn btn-red" ng-click="cancel()"/>
+                    <div class="col-xs-12">
+                        <input ng-model="driver.licenseNumber" type="text" class="form-control custom-form-control"
+                               id="licenseNumber"
+                               placeholder="License Number*">
                     </div>
-                </form>
+                </div>
             </div>
-        </div>
+            <div class="col-xs-12 col-sm-6 mt-10">
+                <div class="form-group col-xs-12">
+
+                    <div class="col-xs-12">
+                        <date-picker id="licenseValidity" ng-model="driver.licenseValidity"
+                                     placeholder="'License Validity'"></date-picker>
+                    </div>
+                </div>
+
+                <div class="form-group col-xs-12">
+
+                    <div class="col-xs-12">
+                        <input ng-model="driver.salary" type="number" class="form-control custom-form-control"
+                               id="salary"
+                               placeholder="Salary">
+                    </div>
+                </div>
+
+
+                <div class="form-group col-xs-12">
+                    <label class="col-sm-4">Driver Status</label>
+                    <div class="col-sm-8"><input type="checkbox" ng-model="driver.isActive"></div>
+                </div>
+
+            </div>
+
+            <div class="clearfix"></div>
+            <div class="col-xs-4 col-xs-push-4">
+                <div class="alert alert-danger" role="alert" ng-show="driver.errors.length">
+                    <ul>
+                        <li ng-repeat="error in driver.errors">{{error}}</li>
+                    </ul>
+                </div>
+            </div>
+
+                <div class="col-xs-12">
+                    <div class="col-xs-5 col-xs-push-7 mtb-25">
+                        <button type="submit" class="btn can" ng-click="cancel()">Cancel</button>
+                        <button type="submit" class="btn can  last" ng-click="addOrSaveDriver()">Submit</button>
+                    </div>
+                </div>
+
+        </form>
     </div>
+</div>
+</div>
 </div>
