--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -1,5 +1,5 @@
 
-        <div class="main-right col-xs-12" ng-controller="ExpenseCtrl">
+        <div class="main-temp col-xs-12" ng-controller="ExpenseCtrl">
             <div class="col-xs-12 pall-zero mb-10">
                 <div class="col-sm-3 pall-zero"><h3>Expenses</h3></div>
                 <div class="col-sm-6">
@@ -18,9 +18,6 @@
                         <option ng-repeat="maintanence in currentPageOfMaintanence ">{{maintanence.attrs.truckName}}</option>
                     </select>
                 </div>
-            </div>
-            <div class="toolbar-button-div pull-right mb-10">
-                <button class="btn  btn-blue pull-right" ng-click="goToEditExpensePage()">Add Expenses</button>
             </div>
 
             <table class="table table-bordered table-striped table-condensed table-hover" ng-table="expenseParams">
@@ -58,5 +55,10 @@
                 </tr>
             </table>
             <div class="clearfix"></div>
+            <div class="add-image pull-right">
+                <figure>
+                    <a href="#" ng-click="goToEditExpensePage()"><img src="images/Add_Expenses.png"></a>
+                </figure>
+            </div>
         </div>
 
