--- a/client/views/partials/party/edit-party.html
+++ b/client/views/partials/party/edit-party.html
@@ -1,125 +1,119 @@
+<div class="main-right col-xs-12" ng-controller="AddEditPartyCtrl">
+    <div class="col-xs-12 account-edit">
+        <h2 class="title-name">{{pageTitle}}</h2>
+        <form class="mt-10">
+            <div class="col-xs-12 col-sm-6">
+                <div class="form-group col-xs-12">
 
-        <div class="main-right col-xs-12" ng-controller="AddEditPartyCtrl">
-            <div class="col-xs-12 account-edit">
-                <h2 class="login-heading">{{pageTitle}}</h2>
+                    <div class="col-xs-12">
+                        <input ng-model="party.name" type="text" class="form-control custom-form-control" id="accountId"
+                               placeholder="Party Name*">
+                    </div>
+                </div>
+
+                <div class="form-group col-xs-12">
+
+                    <div class="col-xs-12">
+                        <input ng-model="party.contact" type="number" class="form-control custom-form-control"
+                               id="contactPhone"
+                               placeholder="Contact Phone*">
+                    </div>
+
+                </div>
+
+                <div class="form-group col-xs-12">
+
+                    <div class="col-xs-12">
+                        <input ng-model="party.email" type="email" class="form-control custom-form-control"
+                               id="contactEmail"
+                               placeholder="Email*">
+                    </div>
+                </div>
+                <div class="form-group col-xs-12">
+
+                    <div class="col-xs-12">
+                        <input ng-model="party.city" type="text" class="form-control custom-form-control" id="city"
+                               placeholder="City*">
+                    </div>
+                </div>
+
+            </div>
+            <div class="toolbar-button-div pull-right mb-10">
+                <button class="btn btn-blue add-trip-lane" ng-click="addTripLane()">Add Trip Lanes</button>
+            </div>
+            <div class="col-xs-12 col-xs-6">
                 <form class="mt-10">
-                    <div class="col-xs-12 col-sm-6">
-                        <div class="form-group col-xs-12">
-                            <label for="accountId" class="col-xs-12 col-sm-4 pall-zero">Name</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="party.name" type="text" class="form-control" id="accountId"
-                                       placeholder="Party Name">
+                    <div class="col-xs-12 form-group" ng-repeat="tripLane in party.tripLanes track by $index">
+
+                        <div class="mb-0 ">
+                            <div class="col-sm-4 col-xs-12 pl4-pr0">
+                                <input ng-model="tripLane.name" type="text" class="form-control" id="name"
+                                       placeholder="Trip Lane Name">
                             </div>
-                        </div>
-
-                        <div class="form-group col-xs-12">
-                            <label for="contactPhone" class="col-xs-12 col-sm-4 pall-zero">Contact Phone</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="party.contact" type="number" class="form-control" id="contactPhone"
-                                       placeholder="Contact Phone">
+                            <div class="col-xs-12 col-sm-4 pl4-pr0">
+                                <input ng-model="tripLane.from" type="text" class="form-control" id="from"
+                                       placeholder="From">
                             </div>
-
-                        </div>
-
-                        <div class="form-group col-xs-12">
-                            <label for="contactEmail" class="col-xs-12 col-sm-4 pall-zero">Email</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="party.email" type="email" class="form-control" id="contactEmail"
-                                       placeholder="Email">
+                            <div class="col-sm-3 col-xs-12 pl4-pr0">
+                                <input ng-model="tripLane.to" type="text" class="form-control" id="to"
+                                       placeholder="To">
                             </div>
-                        </div>
-                        <div class="form-group col-xs-12">
-                            <label for="city" class="col-xs-12 col-sm-4 pall-zero">City</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="party.city" type="text" class="form-control" id="city"
-                                       placeholder="City">
+                            <div class="col-sm-1 col-xs-12">
+                                <button class="btn btn-custom btn-default" ng-click="deleteTripLane($index);">
+                                    <i class="fa fa-minus-circle" aria-hidden="true"></i></button>
                             </div>
-                        </div>
-
-                        <!--<div class="form-group col-xs-12">
-                            <label for="operatingLane" class="col-xs-12 col-sm-4 pall-zero">Operating Lane</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="party.operatingLane" type="text" class="form-control"
-                                       id="operatingLane"
-                                       placeholder="Operating Lane"></div>
-                        </div>-->
-                    </div>
-                    <div class="toolbar-button-div pull-right mb-10">
-                        <button class="btn btn-blue add-trip-lane" ng-click="addTripLane()">Add Trip Lanes</button>
-                    </div>
-                    <div class="col-xs-12 col-xs-6">
-                        <form class="mt-10">
-                            <div class="col-xs-12 form-group"  ng-repeat="tripLane in party.tripLanes track by $index">
-
-                                <div class="mb-0 ">
-                                    <div class="col-sm-4 col-xs-12 pl4-pr0">
-                                        <input ng-model="tripLane.name" type="text" class="form-control" id="name"
-                                               placeholder="Trip Lane Name">
-                                    </div>
-                                    <div class="col-xs-12 col-sm-4 pl4-pr0">
-                                        <input ng-model="tripLane.from" type="text" class="form-control" id="from"
-                                               placeholder="From">
-                                    </div>
-                                    <div class="col-sm-3 col-xs-12 pl4-pr0">
-                                        <input ng-model="tripLane.to" type="text" class="form-control" id="to"
-                                               placeholder="To">
-                                    </div>
-                                    <div class="col-sm-1 col-xs-12">
-                                        <button class="btn btn-custom btn-default" ng-click="deleteTripLane($index);">
-                                            <i class="fa fa-minus-circle" aria-hidden="true"></i></button>
-                                    </div>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </div>
-
-                        </form>
-
-                    </div>
-                    <div class="clearfix"></div>
-                    <div class="col-xs-4 col-xs-push-4">
-                        <div class="alert alert-danger" role="alert" ng-show="party.error.length">
-                            <ul>
-                                <li  ng-repeat="error in party.error">{{error}}</li>
-                            </ul>
-                        </div>
-
-                        <div class="alert alert-success" role="alert" ng-show="party.success.length">
-                            <ul>
-                                <li  ng-repeat="success in party.success">{{success}}</li>
-                            </ul>
-                        </div>
-                        <div class="margin-top-40">
-                        <input type="button" value="Submit" class="btn btn-primary" ng-click="addOrUpdateParty()"/>
-                        <input type="button" value="Cancel" class="btn btn-red" ng-click="cancel()"/>
+                            <div class="clearfix"></div>
                         </div>
                     </div>
+
                 </form>
-            </div>
-            <div class="col-xs-12">
-                <table class="table table-bordered table-striped table-condensed table-hover hide" ng-table="tripLanesParams">
-                    <tr ng-repeat="trip in currentPageOfTrips" style="text-align: center;">
-                        <td data-title="'Name'" sortable="'name'" class="clickable-item col-sm-2">{{ trip.name }}</td>
-                        <td data-title="'From'" sortable="'from'" class="clickable-item col-sm-3">{{ trip.from }}</td>
-                        <td data-title="'To'" sortable="'to'" class="clickable-item col-sm-3">{{ trip.to }}</td>
 
-                        <td data-title="'Created By'" sortable="'agent.attrs.createdByName'"
-                            class="clickable-item col-sm-2">{{ trip.attrs.createdByName }}
-                        </td>
-                        <td data-title="'Action'" class="col-sm-2">
-                            <a href="#" class="btn" ng-click="goToEditTripLanePage(trip._id)">
-                                <span class="glyphicon glyphicon-pencil"></span></a>
-
-                            <a href="#" class="btn" ng-click="deleteTripLane(trip._id)">
-                                <span class="glyphicon glyphicon-remove"></span>
-                            </a>
-                        </td>
-                    </tr>
-                    <tr ng-if="!currentPageOfTrips || currentPageOfTrips.length === 0">
-                        <td colspan="8">No trips exist.</td>
-                    </tr>
-                </table>
             </div>
-        </div>
+            <div class="clearfix"></div>
+            <div class="col-xs-4 col-xs-push-4">
+                <div class="alert alert-danger" role="alert" ng-show="party.error.length">
+                    <ul>
+                        <li ng-repeat="error in party.error">{{error}}</li>
+                    </ul>
+                </div>
+
+                <div class="alert alert-success" role="alert" ng-show="party.success.length">
+                    <ul>
+                        <li ng-repeat="success in party.success">{{success}}</li>
+                    </ul>
+                </div>
+                <div class="mt-30">
+                    <button type="submit" class="btn can" ng-click="cancel()">Cancel</button>
+                    <button type="submit" class="btn can last" ng-click="addOrUpdateParty()">Submit</button>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="col-xs-12">
+        <table class="table table-bordered table-striped table-condensed table-hover hide" ng-table="tripLanesParams">
+            <tr ng-repeat="trip in currentPageOfTrips" style="text-align: center;">
+                <td data-title="'Name'" sortable="'name'" class="clickable-item col-sm-2">{{ trip.name }}</td>
+                <td data-title="'From'" sortable="'from'" class="clickable-item col-sm-3">{{ trip.from }}</td>
+                <td data-title="'To'" sortable="'to'" class="clickable-item col-sm-3">{{ trip.to }}</td>
+
+                <td data-title="'Created By'" sortable="'agent.attrs.createdByName'"
+                    class="clickable-item col-sm-2">{{ trip.attrs.createdByName }}
+                </td>
+                <td data-title="'Action'" class="col-sm-2">
+                    <a href="#" class="btn" ng-click="goToEditTripLanePage(trip._id)">
+                        <span class="glyphicon glyphicon-pencil"></span></a>
+
+                    <a href="#" class="btn" ng-click="deleteTripLane(trip._id)">
+                        <span class="glyphicon glyphicon-remove"></span>
+                    </a>
+                </td>
+            </tr>
+            <tr ng-if="!currentPageOfTrips || currentPageOfTrips.length === 0">
+                <td colspan="8">No trips exist.</td>
+            </tr>
+        </table>
+    </div>
+</div>
 
 
 
