--- a/client/views/partials/payments/paymentsEdit.html
+++ b/client/views/partials/payments/paymentsEdit.html
@@ -1,74 +1,72 @@
+<div class="main-right col-xs-12" ng-controller="paymentsEditController">
+    <div class="col-xs-12 account-edit">
+        <h2 class="title-name">{{pagetitle}}</h2>
+        <form class="mt-10">
+            <div class="col-xs-12 col-sm-6">
+                <div class="form-group col-xs-12">
+                    <div class="col-xs-12">
+                        <date-picker id="date" ban-future="'banFutureDate'" ng-model="paymentsDetails.date"
+                                     placeholder="'Date*'"></date-picker>
+                    </div>
+                </div>
+                <div class="form-group col-xs-12">
 
-        <div class="main-right col-xs-12" ng-controller="paymentsEditController">
-            <div class="col-xs-12 account-edit">
-                <h2 class="login-heading">{{pagetitle}}</h2>
-                <form class="mt-10">
-                    <div class="col-xs-12 col-sm-6">
-                        <div class="form-group col-xs-12">
-                            <label for="date" class="col-sm-4 col-xs-12 pall-zero">Date</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <date-picker id="date" ban-future="'banFutureDate'" ng-model="paymentsDetails.date"></date-picker>
-                            </div>
-                        </div>
-                        <div class="form-group col-xs-12">
-                            <label for="description" class="col-sm-4 col-xs-12 pall-zero">Description</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="paymentsDetails.description" type="text" class="form-control"
-                                       id="description"
-                                       placeholder="Description">
-                            </div>
+                    <div class="col-xs-12 pos-relative">
+                        <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                        <input type="text" ng-model="partyName"
+                               uib-typeahead="party.name for party in parties | filter:$viewValue"
+                               class="form-control custom-form-control" typeahead-min-length="1"
+                               typeahead-on-select="selectPartyId($item)"
+                               typeahead-select-on-exact="true"
+                               typeahead-no-results="noParty" autocomplete="false" placeholder="Party Name*">
+                        <div ng-show="noParties">
+                            <i class="glyphicon glyphicon-remove red"></i>
+                            <span class="red"> No Results Found </span>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-6">
-                        <div class="form-group col-xs-12">
-                            <label for="partyId" class="col-sm-4 col-xs-12 pall-zero ">Party</label>
-                            <div class="col-sm-8 col-xs-12">
-                                <input type="text" ng-model="partyName"
-                                       uib-typeahead="party.name for party in parties | filter:$viewValue"
-                                       class="form-control" typeahead-min-length="1"
-                                       typeahead-on-select="selectPartyId($item)"
-                                       typeahead-select-on-exact="true" placeholder="Party"
-                                       typeahead-no-results="noParty" autocomplete="false">
-                                <div ng-show="noParties">
-                                    <i class="glyphicon glyphicon-remove red"></i>
-                                    <span class="red"> No Results Found </span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group col-xs-12">
-                            <label for="amount" class="col-xs-12 col-sm-4 pall-zero">Amount</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="paymentsDetails.amount" type="number" class="form-control" id="amount"
-                                       placeholder="Amount"></div>
-                        </div>
+                </div>
+                <div class="form-group col-xs-12">
+                    <div class="col-xs-12">
+                        <input ng-model="paymentsDetails.amount" type="number" class="form-control custom-form-control"
+                               id="amount" placeholder="Amount">
                     </div>
-                    <div class="clearfix"></div>
-
-                    <div class="col-xs-4 col-xs-push-4">
-
-                        <div>
-                            <div class="alert alert-danger" role="alert" ng-show="paymentsDetails.error.length">
-                                <ul>
-                                    <li  ng-repeat="error in paymentsDetails.error">{{error}}</li>
-                                </ul>
-                            </div>
-
-                            <div class="alert alert-success" role="alert" ng-show="paymentsDetails.success.length">
-                                <ul>
-                                    <li  ng-repeat="success in paymentsDetails.success">{{success}}</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="margin-top-20">
-                            <button type="submit" class="btn btn-primary" ng-click="AddorUpdatePayments()">Submit
-                            </button>
-                            <button type="submit" class="btn btn-red" ng-click="cancel()">Cancel
-                            </button>
-                        </div>
-                    </div>
-                </form>
+                </div>
             </div>
+            <div class="col-xs-12 col-sm-6">
+                <div class="form-group col-xs-12">
+                    <div class="col-xs-12">
+                        <textarea ng-model="paymentsDetails.description" type="textarea"
+                                  class="form-control custom-form-control"
+                                  id="description" placeholder="Remarks"></textarea>
+                    </div>
+                </div>
+
+            </div>
+            <div class="clearfix"></div>
+
+            <div class="col-xs-4 col-xs-push-4">
+                <div class="alert alert-danger" role="alert" ng-show="paymentsDetails.error.length">
+                    <ul>
+                        <li ng-repeat="error in paymentsDetails.error">{{error}}</li>
+                    </ul>
+                </div>
+
+                <div class="alert alert-success" role="alert" ng-show="paymentsDetails.success.length">
+                    <ul>
+                        <li ng-repeat="success in paymentsDetails.success">{{success}}</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <div class="col-xs-5 col-xs-push-7 mtb-25">
+                    <button type="submit" class="btn can" ng-click="cancel()">Cancel</button>
+                    <button type="submit" class="btn can last" ng-click="AddorUpdatePayments()">Submit</button>
+
+                </div>
+            </div>
+        </form>
+    </div>
 
 
-        </div>
+</div>
 
